# kailash

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  ruff.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions-OLD.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
apps/backend/: .env.example  Dockerfile  advanced_fix.py  comprehensive_fix.py  conftest.py  fix_corruption.py  fix_numeric_corruption.py  quick_seed.py  requirements.txt  server.py  targeted_fix.py
apps/frontend/: .env.development  .env.production  (+9 more)
backend/: .env.example  __init__.py  conftest.py  requirements.txt  server.py
docs/: DEPLOYMENT.md  README.md
frontend/: .env.development  .env.production  .env.staging  .firebaserc  Dockerfile  README.md  firebase.json  nginx.conf  package-lock.json  package.json  tailwind.config.js
platform/: pyproject.toml
platform/gateway/: Dockerfile  README.md  requirements.txt
platform/gateway/app/: main.py
platform/kailash_platform_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
platform/kailash_shared/: README.md  __init__.py  app.py  auth.py  config.py  errors.py  logging.py  schemas.py
platform/shared/: __init__.py  auth.py  schemas.py
scripts/: emoji_purge.py  generate_services.ps1  health_check.sh  mongodb_backup.sh  mongodb_health_check.sh  mongodb_init.js  optimize_deployment.py
tools/: add_prajapati.py  db_inspector.py
(+1049 files in other folders)
