[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kailash-platform-shared"
version = "0.1.0"
description = "KAILASH-AI platform shared library (schemas, auth, logging, app factory)."
requires-python = ">=3.10"
readme = "kailash_shared/README.md"
license = { text = "Proprietary" }
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[tool.setuptools]
packages = ["kailash_shared"]
